Project ReConnectMindHealth_ClinicalProfileDomain {
  database_type: "MySQL"
  Note: "Lược đồ CSDL miền hồ sơ lâm sàng của bệnh nhân và bác sĩ"
}

Table users {
  id uuid [pk]
  email varchar(255) [not null, unique]
  role varchar(32) [not null]
  is_active bool
}

Table therapist_profiles {
  user_id uuid [pk, ref: > users.id]
  full_name varchar(255) [not null]
  specialization varchar(255)
  bio text
  region varchar(255)
  years_experience int
  meeting_link varchar(500)
  approval_status varchar(32)
  created_at datetime
  updated_at datetime
}

Table therapist_credentials {
  id uuid [pk]
  therapist_id uuid [not null, ref: > therapist_profiles.user_id]
  file_name varchar(255)
  mime_type varchar(100)
  storage_path varchar(500)
  created_at datetime
}

Table patient_profiles {
  user_id uuid [pk, ref: > users.id]
  therapist_id uuid [ref: > therapist_profiles.user_id]
  nickname varchar(255) [unique]
  anonymous_mode_enabled bool
  avatar_icon varchar(100)
  real_full_name varchar(255)
  date_of_birth date
  gender varchar(32)
  phone_number varchar(20)
  emergency_contact_phone varchar(20)
  education_level varchar(100)
  occupation varchar(255)
  relationship_status varchar(100)
  medical_history text
  medical_profile_completed bool
  psychoeducation_completed bool
  created_at datetime
  updated_at datetime
}
